# owui-search-tool

./: .gitignore  AGENTS.md  Dockerfile  README.md  Requirements.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
app/: auth.py  dependencies.py  main.py  models.py
app/core/: config.py  errors.py  logging.py  search_engines.py  search_language.py
app/extractors/: page_extractor.py
app/providers/: base.py  playwright_provider.py
app/routes/: tool.py
app/services/: research_service.py
test-app/: index.html  nginx.conf
tests/: conftest.py  test_api.py  test_config.py
